refactor: simplify list collection in GlobalExceptionHandler for improved readability